fix: Menu visibility is hidden for default in menu css class, when menu init visibility change to visible

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -32,6 +32,7 @@
     height: 100%;
     position: fixed;
     z-index: 9999;
+    visibility: hidden;
     /* flex-direction: column;
     justify-content: center;
     align-items: center; */
